// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMoreCTA Component renders correctly for aws free plan (cta to upgrade) 1`] = `
<p>
  Need to send more?
   
  <UnstyledLink
    Component={[Function]}
    to="/account/billing"
  >
    Upgrade your account.
  </UnstyledLink>
   
  <UnstyledLink
    external={true}
    to="https://support.sparkpost.com/customer/portal/articles/2030894"
  >
    Learn more about these limits.
  </UnstyledLink>
</p>
`;

exports[`SendMoreCTA Component renders correctly for customers who can request limit bump 1`] = `
<p>
  Need to send more?
   
  <React.Fragment>
    <UnstyledLink
      Component={[Function]}
      onClick={[Function]}
    >
      Submit a request
    </UnstyledLink>
     to increase your daily sending limit.
  </React.Fragment>
   
  <UnstyledLink
    external={true}
    to="https://support.sparkpost.com/customer/portal/articles/2030894"
  >
    Learn more about these limits.
  </UnstyledLink>
</p>
`;

exports[`SendMoreCTA Component renders support form correctly 1`] = `
<p>
  Need to send more?
   
  <React.Fragment>
    <UnstyledLink
      Component={[Function]}
      onClick={[Function]}
    >
      Submit a request
    </UnstyledLink>
     to increase your daily sending limit.
  </React.Fragment>
   
  <UnstyledLink
    external={true}
    to="https://support.sparkpost.com/customer/portal/articles/2030894"
  >
    Learn more about these limits.
  </UnstyledLink>
</p>
`;

exports[`SendMoreCTA Component renders when email address not verified 1`] = `
<p>
  Need to send more?
   
  <UnstyledLink
    onClick={[Function]}
  >
    Verify your email.
  </UnstyledLink>
   
  <UnstyledLink
    external={true}
    to="https://support.sparkpost.com/customer/portal/articles/2030894"
  >
    Learn more about these limits.
  </UnstyledLink>
</p>
`;
